--- a/src/html/grammar.html
+++ b/src/html/grammar.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -52,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -215,6 +219,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -223,52 +228,151 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <table class="table table-bordered">
-              <thead style="background-color: rgba(243, 243, 243, 1)">
-                <tr>
-                  <th class="col-xs-2">课程阶段</th>
-                  <th class="col-xs-4">选择内容</th>
-                  <th class="col-xs-6">单元</th>
-                </tr>
-              </thead>
-              <tbody style="background-color: #fff">
-                <tr>
-                  <td>小学语法</td>
-                  <td>一、状语</td>
-                  <td>Unit 1 Part1
-                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>初中语法</td>
-                  <td>二、定语从句</td>
-                  <td>Unit 1 Part1
-                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>高中语法</td>
-                  <td>一、状语</td>
-                  <td>Unit 1 Part1
-                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="visHideen"></td>
-                  <td>一、状语</td>
-                  <td>Unit 1 Part1
-                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="visHideen"></td>
-                  <td>一、状语</td>
-                  <td>Unit 1 Part1
-                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="xc-table">
+              <div class="xc-table-head">
+                <ul>
+                  <li class="col-xs-2">课程阶段</li>
+                  <li class="col-xs-4">选择内容</li>
+                  <li class="col-xs-4">单元</li>
+                </ul>
+              </div>
+              <div class="xc-table-body">
+                <ul class="jq-xc-table" style="height: 232px;">
+                  <li class="one active">小学语法
+                    <ul class="two">
+                      <li class="active">一状语
+                        <ul class="three big">
+                          <li class="active">小学Unit 1-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>一状语
+                        <ul class="three big">
+                          <li class="active">小学Unit 2-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>小学Unit 2-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="">一状语
+                        <ul class="three big">
+                          <li class="active">小学Unit 3-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>小学Unit 3-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="">一状语
+                        <ul class="three big">
+                          <li class="active">小学Unit 4-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>小学Unit 4-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="one">初中语法
+                    <ul class="two">
+                      <li class="active">二定语从句
+                        <ul class="three big">
+                          <li class="active">初中Unit 1-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>初中Unit 1-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二定语从句
+                        <ul class="three big">
+                          <li class="active">初中Unit 2-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>初中Unit 2-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二定语从句
+                        <ul class="three big">
+                          <li class="active">初中Unit 3-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>初中Unit 3-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二定语从句
+                        <ul class="three big">
+                          <li class="active">初中Unit 4-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>初中Unit 4-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="one">高中语法
+                    <ul class="two">
+                      <li class="active">三状语
+                        <ul class="three big">
+                          <li class="active">高中Unit 1-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>高中Unit 1-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三状语
+                        <ul class="three big">
+                          <li class="active">高中Unit 2-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>高中Unit 2-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三状语
+                        <ul class="three big">
+                          <li class="active">高中Unit 3-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>高中Unit 3-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三状语
+                        <ul class="three big">
+                          <li class="active">高中Unit 4-1 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                          <li>高中Unit 4-2 Part1
+                            <a type="button" href="./grammar_unit.html" class="btn pull-right btn-primary">详情</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -280,6 +384,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -301,6 +406,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/grammar.js"></script>
 
 
 
