--- a/src/html/intelligent_unit.html
+++ b/src/html/intelligent_unit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步课程-单元</title>
+  <title>分卷</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -222,33 +222,34 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          初中英语-牛津上海版-七年级第二册-Unit 1 Part 1
+          初中英语-牛津上海版-七年级第二册-Unit 1
           <ol class="breadcrumb">
             <li>
-              <a href="./synchronize.html">同步课程</a>
+              <a href="./intelligent_test.html">同步智测</a>
             </li>
-            <li class="active">单元</li>
+            <li class="active">分卷</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="xc-text-group col-xs-6 center-block">
               <div class="xc-text-item">
-                <a href="./synchronize_unit_word.html">
-                  单词
-                  <br>20个单词/未录入
+                <a href="./intelligent_unit_hearing.html">
+                  易
+                  <br>(未录入)
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./synchronize_unit_sentence.html">
-                  句子
-                  <br>20个句子/未录入
+                <a href="./intelligent_unit_hearing.html">
+                  中
+                  <br>
+                  <span class="error">(未完成)</span>
                 </a>
               </div>
               <div class="xc-text-item">
-                <a href="./synchronize_unit_text.html">
-                  课文
-                  <br>1篇课文/未录入
+                <a href="./intelligent_unit_hearing.html">
+                  难
+                  <br>(未录入)
                 </a>
               </div>
             </div>
