--- a/src/html/grammar_unit.html
+++ b/src/html/grammar_unit.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -52,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -213,32 +217,47 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           初中语法-冠词-Unit1
           <ol class="breadcrumb">
-            <li><a href="#">搞定语法</a></li>
+            <li>
+              <a href="./grammar.html">搞定语法</a>
+            </li>
             <li class="active">单元</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
-            <a href="grammar_unit_choice.html" class="btn btn-info">选择题</a>
-            <a href="grammar_unit_fillblank.html" class="btn btn-info">填空题</a>
+            <div class="xc-text-group col-xs-6 center-block">
+              <div class="xc-text-item">
+                <a href="./grammar_unit_choice.html">
+                  学后智测-单选题
+                  <br>20题/未设置
+                </a>
+              </div>
+              <div class="xc-text-item">
+                <a href="./grammar_unit_fillblank.html">
+                  学后智测-填空题
+                  <br>20题/未设置
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -259,6 +278,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
