--- a/src/html/grammar_unit_choice.html
+++ b/src/html/grammar_unit_choice.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -52,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -213,26 +217,390 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          单选题 <span class="text-sm hidden-xs">以下为题库，可以无限添加，实际测试题会从以下题目中随机抽取6题，因此题库题目数需大于等于6题</span>
+          单选题
+          <span class="text-sm hidden-xs">以下为题库，可以无限添加，实际测试题会从以下题目中随机抽取6题，因此题库题目数需大于等于6题</span>
           <ol class="breadcrumb">
-            <li><a href="#">搞定语法</a></li>
-            <li><a href="#">单元</a></li>
+            <li>
+              <a href="./grammar.html">搞定语法</a>
+            </li>
+            <li>
+              <a href="./grammar_unit.html">单元</a>
+            </li>
             <li class="active">学后智测单选题</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <button class="btn btn-default" data-toggle="modal" data-target="#add">添加题目</button>
+            <button class="btn btn-primary ml5">保存并返回</button>
+            <h4>当前题库共
+              <span>10</span>
+              题
+            </h4>
+            <ul class="xc-questions">
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干1</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option1" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option1" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option1" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option1" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干2</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option2" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option2" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option2" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option2" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干3</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option3" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option3" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option3" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option3" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干4</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option4" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option4" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option4" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option4" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干5</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option5" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option5" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option5" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option5" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干6</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option6" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option6" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option6" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option6" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干7</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option7" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option7" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option7" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option7" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干8</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option8" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option8" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option8" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option8" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干9</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option9" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option9" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option9" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option9" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+              <li class="col-xs-12">
+                <div class="col-xs-10">
+                  <h4>题干题干题干题干题干题干10</h4>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option10" value="1" checked>
+                      <p>A.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option10" value="2">
+                      <p>B.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option10" value="3">
+                      <p>C.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="option10" value="4">
+                      <p>D.选项选项选项选项选项选项</p>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-xs-2">
+                  <span class="text-primary pull-right jq-del-choice">删除本题</span>
+                </div>
+              </li>
+            </ul>
+            <nav aria-label="...">
+              <ul class="pagination">
+                <li class="disabled">
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">«</span>
+                  </a>
+                </li>
+                <li class="active">
+                  <a href="#">1
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">2</a>
+                </li>
+                <li>
+                  <a href="#">3</a>
+                </li>
+                <li>
+                  <a href="#">4</a>
+                </li>
+                <li>
+                  <a href="#">5</a>
+                </li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">»</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
@@ -243,7 +611,66 @@
 
 
   </div>
-
+  <div id="add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 id="myModalLabel" class="modal-title">添加题目</h4>
+        </div>
+        <div class="modal-body">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label class="col-lg-1 control-label">题干</label>
+              <div class="col-lg-11">
+                <input type="text" placeholder="请输入题干" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-1 control-label">A:</label>
+              <div class="col-lg-5">
+                <input type="text" placeholder="请输入选项A" class="form-control">
+              </div>
+              <label class="col-lg-1 control-label">B:</label>
+              <div class="col-lg-5">
+                <input type="text" placeholder="请输入选项B" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-1 control-label">C:</label>
+              <div class="col-lg-5">
+                <input type="text" placeholder="请输入选项C" class="form-control">
+              </div>
+              <label class="col-lg-1 control-label">D:</label>
+              <div class="col-lg-5">
+                <input type="text" placeholder="请输入选项D" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-1 control-label">答案解析:</label>
+              <div class="col-lg-2">
+                <select name="account" class="form-control m-b">
+                  <option>请选择答案</option>
+                  <option>A</option>
+                  <option>B</option>
+                  <option>C</option>
+                  <option>D</option>
+                </select>
+              </div>
+              <div class="col-lg-9">
+                <input type="text" placeholder="请输入解析" class="form-control">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">保存</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -258,6 +685,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/grammar.js"></script>
 
 
 
