--- a/src/html/intelligent_real.html
+++ b/src/html/intelligent_real.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -52,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -215,6 +219,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -224,21 +229,34 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">小升初<br>十套试卷</div>
-              <div class="xc-text-item">中考冲刺<br>十套试卷</div>
-              <div class="xc-text-item">高考冲刺<br>十套试卷</div>
+              <div class="xc-text-item">
+                <a href="./intelligent_unit_hearing.html">小升初
+                  <br>十套试卷
+                </a>
+              </div>
+              <div class="xc-text-item">
+                <a href="./intelligent_unit_hearing.html">中考冲刺
+                  <br>十套试卷
+                </a>
+              </div>
+              <div class="xc-text-item">
+                <a href="./intelligent_unit_hearing.html">高考冲刺
+                  <br>十套试卷
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -260,6 +278,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
