--- a/src/html/mallmanagement_commodity.html
+++ b/src/html/mallmanagement_commodity.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <!-- 上传 -->
   <link rel="stylesheet" href="../js/vendor/blueimp-file-upload/css/jquery.fileupload.css">
   <link rel="stylesheet" href="../css/main_xc.css">
@@ -54,9 +55,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -68,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -217,6 +217,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -357,8 +358,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
               </div>
@@ -374,6 +376,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -394,6 +397,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
   <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload.js"></script>
   <script src="../js/vendor/blueimp-file-upload/js/jquery.fileupload-ui.js"></script>
   <script src="../js/mallmanagement.js"></script>
