--- a/src/html/studentmanagement_allocated.html
+++ b/src/html/studentmanagement_allocated.html
@@ -22,6 +22,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -52,9 +53,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -66,6 +65,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -211,6 +211,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -413,8 +414,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
               </div>
@@ -430,6 +432,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -450,6 +453,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/studentmanagement.js"></script>
 
