--- a/src/html/studentmanagement_unallocated.html
+++ b/src/html/studentmanagement_unallocated.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
@@ -50,9 +51,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +63,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -210,6 +210,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -381,8 +382,9 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div>  
                 <!-- endbuild -->
+
 
 
               </div>
@@ -398,6 +400,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -419,6 +422,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
   <script src="../js/studentmanagement.js"></script>
