--- a/src/html/synchronize_unit_sentence.html
+++ b/src/html/synchronize_unit_sentence.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -52,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -64,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -213,31 +217,126 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
           初中英语-牛津上海版-七年级第二册-Unit 1 Part 1-句子
           <ol class="breadcrumb">
-            <li><a href="#">同步课程</a></li>
-            <li><a href="#">单元</a></li>
+            <li>
+              <a href="./synchronize.html">同步课程</a>
+            </li>
+            <li>
+              <a href="./synchronize_unit.html">单元</a>
+            </li>
             <li class="active">句子列表</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <a href="./synchronize_unit_sentence_edit.html" type="button" class="btn btn-primary">新增句子</a>
+            <table class="table table-words">
+              <thead>
+                <tr>
+                  <th class="col-xs-2">当前序号</th>
+                  <th class="col-xs-6">句子</th>
+                  <th class="col-xs-2">排序值(数字越大越靠后)</th>
+                  <th class="col-xs-4"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>6</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>7</td>
+                  <td>sentence sentence sentence sentence sentence sentence sentence sentence.</td>
+                  <td>
+                    <input type="text" value="1" col-xs-6 class="form-control">
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right jq-del-sentence">刪除句子</button>
+                    <a href="./synchronize_unit_sentence_edit.html" class="btn btn-primary pull-right">修改</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -258,6 +357,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+  <script src="../js/synchronize.js"></script>
 
 
 
