--- a/src/html/synchronize_unit_word_edit.html
+++ b/src/html/synchronize_unit_word_edit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>同步课程-单元</title>
+  <title>同步课程-编辑单词</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
   <link rel="stylesheet" href="../css/main_xc.css">
-
 
 
 </head>
@@ -222,34 +221,175 @@
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          初中英语-牛津上海版-七年级第二册-Unit 1 Part 1
           <ol class="breadcrumb">
             <li>
               <a href="./synchronize.html">同步课程</a>
             </li>
-            <li class="active">单元</li>
+            <li>
+              <a href="./synchronize_unit.html">单元</a>
+            </li>
+            <li>
+              <a href="./synchronize_unit_word.html">单词列表</a>
+            </li>
+            <li class="active">编辑单词</li>
           </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="xc-text-group col-xs-6 center-block">
-              <div class="xc-text-item">
-                <a href="./synchronize_unit_word.html">
-                  单词
-                  <br>20个单词/未录入
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./synchronize_unit_sentence.html">
-                  句子
-                  <br>20个句子/未录入
-                </a>
-              </div>
-              <div class="xc-text-item">
-                <a href="./synchronize_unit_text.html">
-                  课文
-                  <br>1篇课文/未录入
-                </a>
+            <div class="panel-default">
+              <div class="panel-heading">
+                <div class="xc-tab jq-xc-tab">
+                  <ul class="xc-tab-head">
+                    <li>基础属性</li>
+                    <li>闯关題</li>
+                    <span class="line"></span>
+                  </ul>
+                  <ul class="xc-tab-body">
+                    <li class="active">
+                      <form class="form-horizontal">
+                        <div>
+                          <input class="file" type="file" name="files" multiple="" style="display: none">
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">单词</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入单词" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">音标</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入音标" class="form-control">
+                            </div>
+                          </div>
+                          <div class="clearfix">
+                            <div class="form-group col-xs-6">
+                              <label class="col-lg-2 control-label">发音</label>
+                              <div class="col-lg-10">
+                                <span class="btn btn-default jq-fileinput-button">
+                                  <i class="fa fa-fw fa-upload"></i>
+                                  <span>上传文件</span>
+                                </span>
+                                <p>支持扩展名：.xxx .xxx .xxx</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">词性</label>
+                            <div class="col-lg-10">
+                              <select name="account" class="form-control m-b">
+                                <option value="">请选择词性</option>
+                                <option>词性 1</option>
+                                <option>词性 2</option>
+                                <option>词性 3</option>
+                                <option>词性 4</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">词义</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入词义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">
+                              <button class="btn btn-default btn-small"> + 增加词性词义</button>
+                            </label>
+                          </div>
+                        </div>
+                      </form>
+                    </li>
+                    <li>
+                      <form class="form-horizontal">
+                        <div>
+                          <h4>英译汉：选项为汉语释义</h4>
+                          <div class="clearfix">
+                            <div class="form-group col-xs-6">
+                              <label class="col-lg-2 control-label">正确答案：</label>
+                              <div class="col-lg-10">
+                                <select name="account" class="form-control m-b">
+                                  <option value="">请选择正确答案</option>
+                                  <option>A</option>
+                                  <option>B</option>
+                                  <option>C</option>
+                                  <option>D</option>
+                                </select>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">A：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">B：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">C：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">D：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                        </div>
+                        <div>
+                          <div class="clearfix">
+                            <h4>英译汉：选项为汉语释义</h4>
+                          </div>
+                          <div class="clearfix">
+                            <div class="form-group col-xs-6">
+                              <label class="col-lg-2 control-label">正确答案：</label>
+                              <div class="col-lg-10">
+                                <select name="account" class="form-control m-b">
+                                  <option value="">请选择正确答案</option>
+                                  <option>A</option>
+                                  <option>B</option>
+                                  <option>C</option>
+                                  <option>D</option>
+                                </select>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">A：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">B：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">C：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group col-xs-6">
+                            <label class="col-lg-2 control-label">D：</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="请输入汉语释义" class="form-control">
+                            </div>
+                          </div>
+                        </div>
+                        <button class="btn btn-primary">保存</button>
+                      </form>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -284,7 +424,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/synchronize.js"></script>
 
 
 
